Header section finished, with media queries

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
 
 :root{
-    --red:tomato;
+    --red:#FEA47F;
     --white: #f7f7f0;
+    --black: #2c3e50;
+    --yellow: #ffd32a;
 
 }
 
@@ -41,7 +43,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #000;
+    background: var(--black);
     padding: 2rem 9%;
     box-shadow: 0 .5rem 1rem rgba(0, 0,0 , .1);
 }
@@ -49,7 +51,7 @@ header{
 header .logo{
     font-size: 2.5rem;
     font-weight: bolder;
-    color:yellow;
+    color:var(--yellow);
 
 }
 header .logo i{
@@ -69,3 +71,76 @@ header .navbar a:hover{
     color: var(--red);
 }
 
+#menu-bar{
+    font-size: 3rem;
+    cursor: pointer;
+    color: var(--white);
+    /* border: .1rem solid var(--white); */
+    border-radius: .3rem;
+    padding: .5rem 1.5rem;
+    display: none;
+}
+
+
+
+
+
+
+
+
+/* media queries */
+
+@media(max-width: 991px){
+    html{
+        font-size: 55%;
+    }
+    header{
+        padding: 2rem;
+    }
+
+
+}
+
+@media(max-width:768px){
+    #menu-bar{
+        display: initial;
+    }
+
+    header .navbar{
+        position: absolute;
+        top: 100%; left: 0; right: 0;
+        background: var(--black);
+        border-top: 1rem solid rgba(255, 255, 255, .6);
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+
+    header .navbar .active{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    }
+    header .navbar a{
+        margin: 1.5rem;
+        padding: 2rem;
+        /* line-height:1.5; */
+        display: block;
+        /* border: .1rem solid; */
+        border-left: .5rem solid var(--red) ;
+        /* background:var(--red) ; */
+        
+    }
+    header .navbar a:hover{
+        
+    background:var(--red) ;
+    color: black;    
+    }
+}
+
+@media(max-width: 400px){
+    html{
+        font-size: 50%;
+    }
+    header{
+        padding: 2rem;
+    }
+
+
+}
