--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
     --white: #f7f7f0;
     --black: #2c3e50;
     --yellow: #ffd32a;
+    --superRed: red;
 
 }
 
@@ -34,6 +35,43 @@ html{
 body{
     background:#f7f7f7;
 
+}
+
+section{
+    padding: 2rem 9%;
+}
+
+.btn{
+    display: inline-block;
+    padding: .8rem 3rem;
+    border: .2rem solid var(--red);
+    color: var(--superRed);
+    cursor: pointer;
+    font-size: 1.7rem;
+    border-radius: .5rem;
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+    margin-top: 1rem;
+
+}
+.btn::before{
+    content: '';
+    position: absolute;
+    top: 0; right: 0;
+    width: 0%;
+    height: 100%;
+    background: var(--superRed);
+    transition: .3s linear;
+    z-index: -1;
+}
+.btn:hover::before{
+    width: 100%;
+    left: 0;
+    
+}
+.btn:hover{
+    color: var(--white);
 }
 
 header{
@@ -81,6 +119,75 @@ header .navbar a:hover{
     display: none;
 }
 
+.lineas{
+    color: var(--yellow);
+}
+
+/* home section */
+.home{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    min-height: 100vh;
+    align-items: center;
+    background: url(/images/home-bg.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+
+}
+
+.home .content{
+    flex: 1 1 40rem;
+    padding-top: 6.5rem;
+
+    
+}
+.home .image{
+    flex: 1 1 40rem;
+    
+}
+.home .image img{
+    width: 100%;
+    padding: 1rem;
+    animation: float 3s linear infinite;
+}
+
+@keyframes float {
+    0%, 100%{
+        transform: translateY(0rem);
+
+    }
+    50%{
+        transform: translateY(3rem);
+    }
+}
+
+.home .content h3{
+    font-size: 5rem;
+    color: var(--black);
+}
+
+
+.home .content p{
+    font-size: 1.7rem;
+    color: var(--black);
+    padding: 1rem;
+}
+
+/* home section */
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -98,6 +205,9 @@ header .navbar a:hover{
         padding: 2rem;
     }
 
+    section{
+        padding: 2rem;
+    }
 
 }
 
@@ -110,21 +220,22 @@ header .navbar a:hover{
         position: absolute;
         top: 100%; left: 0; right: 0;
         background: var(--black);
-        border-top: 1rem solid rgba(255, 255, 255, .6);
+        border-top: .1rem solid rgba(0,0,0,.1);
         clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+        
     }
 
-    header .navbar .active{
+    header .navbar.active{
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-    }
+      }
     header .navbar a{
         margin: 1.5rem;
-        padding: 2rem;
+        padding: 1.5rem;
         /* line-height:1.5; */
         display: block;
-        /* border: .1rem solid; */
+        border: .2rem solid rgba(0,0,0,.1);
         border-left: .5rem solid var(--red) ;
-        /* background:var(--red) ; */
+        background:var(--black) ;
         
     }
     header .navbar a:hover{
@@ -134,7 +245,7 @@ header .navbar a:hover{
     }
 }
 
-@media(max-width: 400px){
+@media(max-width: 450px){
     html{
         font-size: 50%;
     }
