--- a/css/styles.css
+++ b/css/styles.css
@@ -119,9 +119,6 @@ header .navbar a:hover{
     display: none;
 }
 
-.lineas{
-    color: var(--yellow);
-}
 
 /* home section */
 .home{
@@ -167,6 +164,20 @@ header .navbar a:hover{
     color: var(--black);
 }
 
+.home .content h3 .heart{
+    font-size: 5rem;
+    color: var(--superRed);
+    animation: latido 1s linear infinite;
+}
+@keyframes latido {
+    0%, 100%{
+        transform: scale(1.5);
+
+    }
+    50%{
+        transform: scale(.5);
+    }
+}
 
 .home .content p{
     font-size: 1.7rem;
@@ -176,7 +187,80 @@ header .navbar a:hover{
 
 /* home section */
 
+/* speciality section  */
+.heading{
+    text-align: center;
+    font-size: 3.5rem;
+    padding: 1rem;
+    color: var(--black);
 
+}
+.heading span{
+    color: var(--superRed);
+
+}
+
+.speciality .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+
+}
+
+.speciality .box-container .box{
+    /* background: #000; */
+    flex: 1 1 30rem;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    border: .1rem solid rgba(0,0,0,.3);
+    cursor: pointer;
+    border-radius: .5rem;
+
+
+}
+
+.speciality .box-container .box .image{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: -100%; left: 0;
+}
+
+.speciality .box-container .box .content{
+    text-align: center;
+    background: var(--white);
+    padding: 2rem;
+
+}
+
+.speciality .box-container .box .content img{
+    margin: 1.5rem 0;
+
+}
+
+.speciality .box-container .box .content h3{
+    font-size: 2.5rem;
+    color: var(--black);
+}
+
+.speciality .box-container .box .content h3 p{
+    font-size: 1.6rem;
+    color: var(--black);
+    padding: 1rem 0;
+
+}
+
+
+.speciality .box-container .box:hover .image{
+    top: 0;
+}
+
+.speciality .box-container .box:hover .content{
+    transform: translateY(100%);
+}
+/* speciality section  */
 
 
 
