--- a/css/styles.css
+++ b/css/styles.css
@@ -262,7 +262,57 @@ header .navbar a:hover{
 }
 /* speciality section  */
 
+/* popular section */
 
+.popular .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.popular .box-container .box{
+    padding: 2rem;
+    background: var(--white);
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    border: .6rem solid rgba(0, 0,0 , .05);
+    border-radius: .5rem;
+    text-align: center;
+    flex:1 1 30rem ;
+}
+
+
+.popular .box-container .box img{
+    height: 25rem;
+    object-fit: cover;
+    width: 100%;
+    border-radius: .5rem;
+
+}
+
+
+.popular .box-container .box .price{
+    position: absolute;
+    /* top: 3rem; left: 3rem; */
+    background:red;
+    color: white;
+    font-size: 2rem;
+    padding: .5rem 1rem;
+    border-radius: .5rem;
+
+} 
+
+.popular .box-container .box h3{
+    color: var(--black);
+    font-size: 2.5rem;
+    padding-top: 1rem;
+}
+
+.popular .box-container .box .stars{
+    color: var(--yellow);
+    font-size: 1.7rem;
+    padding-top: 1rem .1rem;
+}
+/* popular section */
 
 
 
