--- a/css/styles.css
+++ b/css/styles.css
@@ -354,7 +354,63 @@ header .navbar a:hover{
 
 /* steps section */
 
+/* gallery section */
 
+.gallery .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+
+}
+
+.gallery .box-container .box{
+    height: 25rem;
+    flex: 1 1 30rem;
+    border: 1rem solid var(--white);
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    border-radius: .5rem;
+    position: relative;
+    overflow: hidden;
+
+}
+
+.gallery .box-container .box img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+
+
+}
+
+.gallery .box-container .box .content{
+    position: absolute;
+    top: -100%;left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(255, 255, 255, .9);
+    padding: 2rem;
+    padding-top: 5rem;
+    text-align: center;
+}
+
+
+
+.gallery .box-container .box .content h3{
+    font-size: 2.5rem;
+    color: var(--black);
+}
+
+.gallery .box-container .box .content p{
+    font-size: 1.5rem;
+    color:black;
+    padding-top: 1rem 0;
+}
+
+.gallery .box-container .box:hover .content{
+    top: 0%;
+}
+
+/* gallery section */
 
 
 
