--- a/css/styles.css
+++ b/css/styles.css
@@ -412,9 +412,56 @@ header .navbar a:hover{
 
 /* gallery section */
 
+/* review section */
+.review .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.review .box-container .box{
+    text-align: center;
+    padding: 2rem;
+    border: 1rem solid var(--white);
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.3);
+    border-radius: .5rem;
+    flex: 1 1 30rem;
+    background: var(--black);
+    margin-top: 6rem;
+}
+
+.review .box-container .box img{
+    height: 12rem;
+    width: 12rem;
+    border-radius: 50%;
+    border: 1rem solid var(--white);
+    margin-top: -8rem;
+    object-fit: cover;
+
+}
+
+.review .box-container .box h3{
+    font-size: 2.5rem;
+    color: var(--white);
+    padding: .5rem 0;
+}
+
+.review .box-container .box i{
+    font-size: 2rem;
+    color: var(--red);
+    padding: .5rem 0;
+}
+
+.review .box-container .box p{
+    font-size: 1.5rem;
+    color: var(--white);
+    padding: 1rem 0;
+}
 
 
+/* review section */
 
+/* 35:54 */
 
 
 
