--- a/css/styles.css
+++ b/css/styles.css
@@ -563,9 +563,45 @@ header .navbar a:hover{
 
 /* footer section ends */
 
+/* scroll top button */
+    #scroll-top{
+        position: fixed;
+        top: -120%;
+        right: 2rem; 
+        padding: .5rem 1.5rem;
+        font-size:4rem ;
+        background: var(--yellow);
+        color:var(--black);
+        border-radius:50%;
+        transition: 1s linear;
+        z-index: 1000;
+    }
 
+    #scroll-top.active{
+        top: calc(100% - 12rem);
+    }
+/* scroll top button */
 
+/* loader */
+.loader-container{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10000;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+}
 
+.loader-container.fade-out{
+    top: -120%;
+
+}
+
+/* loader */
 
 
 /* media queries */
